Apple store implementation

--- a/src/app/apple/apple/apple.component.html
+++ b/src/app/apple/apple/apple.component.html
@@ -2,3 +2,5 @@
     <p *ngFor="let a of apples">{{a | json }}</p>
     <p *ngFor="let a of apples">{{a.variety}} {{a.isWashed}} {{a.color}} {{a.id}} {{a.state}}</p>
 </ng-container>
+
+<p>{{ loading$ | async}}</p>
